// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly variant beta 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant filled 1`] = `
<DocumentFragment>
  .cache-1s52m9c {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ef5774;
  color: #fff;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1s52m9c e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant info 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant outlined 1`] = `
<DocumentFragment>
  .cache-elz115 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  border: 1px solid #ef5774;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-elz115 e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant standard 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant success 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant transparent 1`] = `
<DocumentFragment>
  .cache-rvu1ij {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: transparent;
  color: #ef5774;
  padding: 12px 0;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-rvu1ij e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly variant warning 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with custom icon 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with title 1`] = `
<DocumentFragment>
  .cache-1i3p2kd {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  padding: 12px;
  background-color: #ffe1e7;
  color: #ef5774;
}

.cache-njjnbl {
  fill: currentColor;
  height: 32px;
  width: 32px;
  min-width: 32px;
  min-height: 32px;
}

.cache-njjnbl.cache-njjnbl {
  vertical-align: middle;
}

.cache-79qxbt {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.cache-79qxbt.cache-79qxbt {
  color: inherit;
}

.cache-1jnipo4 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151a2d;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  color: inherit;
}

.cache-1jnipo4.cache-1jnipo4 {
  margin-left: 16px;
  color: inherit;
}

.cache-1849seg {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 16px;
  line-height: 24px;
  color: inherit;
}

.cache-1849seg.cache-1849seg {
  margin-left: 16px;
  color: inherit;
}

<div
    class="eenhiht1 cache-1i3p2kd e7ah3bn0"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-njjnbl e7ah3bn0"
      viewBox="0 0 24 24"
    >
      <path
        d="M13,14H11V10H13M13,18H11V16H13M1,21H23L12,2L1,21Z"
      />
    </svg>
    <div
      class="eenhiht0 cache-79qxbt e7ah3bn0"
    >
      <p
        class="e1g1zfwd0 cache-1jnipo4 e7ah3bn0"
      >
        title
      </p>
      <p
        class="e1g1zfwd0 cache-1849seg e7ah3bn0"
      >
        Sample Alert
      </p>
    </div>
  </div>
</DocumentFragment>
`;
